; ModuleID = '/home/carl/AnghaBench/nanomsg/src/utils/extr_random.c_nn_random_generate.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/utils/extr_random.c_nn_random_generate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nn_random_state = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_random_generate(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to i32*
  store i32* %7, i32** %5, align 8
  br label %8

8:                                                ; preds = %2, %28
  %9 = load i32, i32* @nn_random_state, align 4
  %10 = mul nsw i32 %9, 1103515245
  %11 = add nsw i32 %10, 12345
  store i32 %11, i32* @nn_random_state, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = load i64, i64* %4, align 8
  %14 = icmp ugt i64 %13, 8
  br i1 %14, label %15, label %16

15:                                               ; preds = %8
  br label %18

16:                                               ; preds = %8
  %17 = load i64, i64* %4, align 8
  br label %18

18:                                               ; preds = %16, %15
  %19 = phi i64 [ 8, %15 ], [ %17, %16 ]
  %20 = trunc i64 %19 to i32
  %21 = call i32 @memcpy(i32* %12, i32* @nn_random_state, i32 %20)
  %22 = load i64, i64* %4, align 8
  %23 = icmp ule i64 %22, 8
  %24 = zext i1 %23 to i32
  %25 = call i64 @nn_fast(i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %18
  ret void

28:                                               ; preds = %18
  %29 = load i64, i64* %4, align 8
  %30 = sub i64 %29, 8
  store i64 %30, i64* %4, align 8
  %31 = load i32*, i32** %5, align 8
  %32 = getelementptr inbounds i32, i32* %31, i64 8
  store i32* %32, i32** %5, align 8
  br label %8
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i64 @nn_fast(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
